第一次提交

--- a/tymovie/index.html
+++ b/tymovie/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-
+<head>
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/style/acg-20200225.css">
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/style/universal.min-legend.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/js/jquery-1.9.1.min.js"></script>
+</head>	
+	
+
+	
 </head>
 <body class="">
     <div class="content-all">
@@ -89,6 +93,6 @@
 <!-- pluginJs -->
 <!-- siteJs -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/js/acg.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/js/json/acg/acg.json"></script>
+<script type="text/javascript" src="https://2broear.com/js/json/acg/acg.json"></script>
 <!-- inHtmlJs -->
 </body></html>
