第一次提交

--- a/tymovie/index.html
+++ b/tymovie/index.html
@@ -3,14 +3,12 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/style/acg-20200225.css">
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/style/universal.min-legend.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/acg.json"></script>
 </head>	
-	
 
-	
-</head>
 <body class="">
     <div class="content-all">
-        <div class="win-top bg" style="background: url('https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/acg/bg.jpg') center center /cover ">
+        <div class="win-top bg" style="background: url('https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/bg.jpg') center center /cover ">
 			<header>
 
 			</header>
@@ -79,20 +77,11 @@
 						</div>
 					</div>
 				</div>
-				
-				<div id="comment_txt" class="wow fadeInUp" data-wow-delay="0.25s">
-					<h2 id="movie">留言评论<sup>  </sup></h2>
-					<p>点击 + 号可以通过邮件推荐你喜欢的类型，也可以通过下方评论推荐。</p>
-				</div>
-				<div id="vcomments" class="wow fadeInUp" data-wow-delay="0.25s"></div>
+			
               </div>
             </div>
         </div>
-<!-- asyncLoadJs -->
-<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/js/asyncload-cdnEnabled.js"></script>
-<!-- pluginJs -->
 <!-- siteJs -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/js/acg.js"></script>
-<script type="text/javascript" src="https://2broear.com/js/json/acg/acg.json"></script>
 <!-- inHtmlJs -->
 </body></html>
