--- a/tymovie/index.html
+++ b/tymovie/index.html
@@ -13,7 +13,7 @@
 	</div>
 </body>
 <script type="text/javascript" src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/acg.js"></script>
+<script type="text/javascript" src="acg.js"></script>
 <script type="text/javascript" src="json/acg.json"></script>
 
 
