--- a/tymovie/index.html
+++ b/tymovie/index.html
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/acg.css" />
 </head>
 <body>
-	<div class="win-top bg" style="background:url(https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/bg.jpg) center center /cover ">
+	<div class="win-top bg" style="background:url(https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/images/bg.jpg) center center /cover ">
 		<div class="counter"></div>
 	</div>
 	<div class="content-all-windows">
@@ -13,8 +13,8 @@
 	</div>
 </body>
 <script type="text/javascript" src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="acg.js"></script>
-<script type="text/javascript" src="json/acg.json"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TYblog/CDN/tymovie/js/acg.js"></script>
+<script type="text/javascript" src="https://2broear.com/js/json/acg/acg.json"></script>
 
 
 </html>
